[package]
name = "del"
version = "0.1.1"
edition = "2021"
description = "A simple crate for removing files in a secure and efficient manner."
license = "MIT"
repository = "https://github.com/SauersML/rm"
homepage = "https://github.com/SauersML/rm"
documentation = "https://github.com/SauersML/rm"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
glob = "0.3"
futures = "0.3"
indicatif = "0.16"
tempfile = "3.16.0"
once_cell = "1.20.3"
libc = "0.2.169"
num_cpus = "1.16.0"
rand = "0.9.0"
ndarray = "0.16.1"
argmin = "0.10.0"
argmin-math   = { version = "0.4.0", features = ["ndarray_latest"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend"] }
statrs = "0.18.0"
