[package]
name = "del"
version = "0.1.2"
edition = "2021"
description = "A simple crate for removing files in a secure and efficient manner."
license = "MIT"
repository = "https://github.com/SauersML/rm"
homepage = "https://github.com/SauersML/rm"
documentation = "https://github.com/SauersML/rm"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
globset = "0.4.15"
futures = "0.3"
progression = "0.1.15"
libc = "0.2.169"
num_cpus = "1.16.0"
lazy_static = "1.5.0"
rayon = "1.10.0"

[dev-dependencies]
rayon = "1.10.0"
walkdir = "2.5.0"
scandir = "2.9.2"
glob = "0.3.2"
tempfile = "3.16.0"
rand = "0.9.0"
libc = "0.2.169"
tokio = { version = "1", features = ["full"] }
globset = "0.4.15"

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
